fix poll page clipping out of viewport

--- a/src/app/core/poll-page/poll-page.component.scss
+++ b/src/app/core/poll-page/poll-page.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
 
     form {
         width: 80%;
